Fix comment overflow issue

--- a/_sass/components/comments.scss
+++ b/_sass/components/comments.scss
@@ -82,5 +82,9 @@
         display: grid;
         row-gap: $paragraph-spacing;
         @include transition(color);
+
+        > * {
+            min-width: 0;
+        }
     }
 }
